tests/ui/traits/next-solver/cycles/normalizes-to-is-not-productive.stderr
error[E0275]: overflow evaluating the requirement `<Foo as Trait<T>>::Assoc: Bound`
  --> $DIR/normalizes-to-is-not-productive.rs:43:31
   |
LL |     <Foo as Trait<T>>::Assoc: Bound,
   |                               ^^^^^

error[E0275]: overflow evaluating whether `<Foo as Trait<T>>::Assoc` is well-formed
  --> $DIR/normalizes-to-is-not-productive.rs:43:31
   |
LL |     <Foo as Trait<T>>::Assoc: Bound,
   |                               ^^^^^

error[E0275]: overflow evaluating the requirement `Foo: Bound`
  --> $DIR/normalizes-to-is-not-productive.rs:49:19
   |
LL |     impls_bound::<Foo>();
   |                   ^^^
   |
note: required by a bound in `impls_bound`
  --> $DIR/normalizes-to-is-not-productive.rs:28:19
   |
LL | fn impls_bound<T: Bound>() {
   |                   ^^^^^ required by this bound in `impls_bound`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0275`.
